--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "AtendeChat",
-	"name": "AtendeChat",
+	"short_name": "Chatbot BRTI",
+	"name": "Chatbot BRTI",
 	"icons": [
 		{
 			"src": "favicon.ico",
