--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-        "short_name": "Conectatbot BRTI",
-        "name": "Conectabot BRTI",
+        "short_name": "ConectaPlus - BRTI",
+        "name": "ConectaPlus - BRTI",
         "icons": [
                 {
                         "src": "favicon.ico",
